--- a/advancetozero.html
+++ b/advancetozero.html
@@ -142,6 +142,82 @@
             <li>52% were rough sleeping (eg streets, parks, cars), 24% in temporary accommodation (eg couch surfing)</li>
     </blockquote>
     <br>
+        <p3><b>Table xx</b>. Homelessness and housing, by locations slept most frequently, Advance to Zero, Western Australia</p3>
+        <button type="button" class="collapsible">Homelessness and housing</button>
+        <div class="tab-content">
+            <table class="normal-table">
+                <thead>
+                <tr>
+                    <th><p></p></th>
+                    <th><p>Number</p></th>
+                    <th><p>Percent</p></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td><p>Sleeping rough</sup></p></td>
+                    <td><p>1642</p></td>
+                    <td><p>51.7</p></td>
+                </tr>
+                <tr>
+                    <td><p>Crisis and emergency accommodation</sup></p></td>
+                    <td><p>309</p></td>
+                    <td><p>9.7</p></td>
+                 </tr>
+                <tr>
+                    <td><p>Crisis and emergency accommodation</sup></p></td>
+                    <td><p>768</p></td>
+                    <td><p>24.1</p></td>
+                </tr>
+                <tr>
+                    <td><p>Crisis and emergency accommodation</sup></p></td>
+                    <td><p>180</p></td>
+                    <td><p>5.7</p></td>
+                </tr>
+                <tr>
+                    <td><p>Crisis and emergency accommodation</sup></p></td>
+                    <td><p>103</p></td>
+                    <td><p>3.2</p></td>
+                </tr>
+                <tr>
+                    <td><p>Crisis and emergency accommodation</sup></p></td>
+                    <td><p>47</p></td>
+                    <td><p>1.5</p></td>
+                </tr>
+                <tr>
+                    <td><p>Crisis and emergency accommodation</sup></p></td>
+                    <td><p>34</p></td>
+                    <td><p>1.1</p></td>
+                </tr>
+                <tr>
+                    <td><p>Crisis and emergency accommodation</sup></p></td>
+                    <td><p>100</p></td>
+                    <td><p>3.1</p></td>
+                </tr>
+                <tr>
+                    <td><p>Crisis and emergency accommodation</sup></p></td>
+                    <td><p>3183</p></td>
+                    <td><p>100.0</p></td>
+                </tr>
+                <tr>
+                    <td><p>Crisis and emergency accommodation</sup></p></td>
+                    <td><p>1642</p></td>
+                    <td><p>51.7</p></td>
+                </tr>
+                </tbody>
+                <tfoot>
+                <tr>
+                    <td colspan="3">
+                        <p2>
+                            Source: Advance to Zero national data 2012-June 2022
+                        </p2>
+                    </td>
+                </tr>
+                </tfoot>
+            </table>
+        </div>
+        <br>
+
       <table class="styled-table">
                 <thead>
                 <tr>
