--- a/advancetozero.html
+++ b/advancetozero.html
@@ -136,10 +136,10 @@
     <br>
     <blockquote class="blockquote">
         <h3>Key findings:</h3>
-            <li>62% male, average age 40 years</li>
+            <h4><li>62% male, average age 40 years</li>
             <li>Women on the whole were younger than their male counterparts and experienced more significant mental health and general health issues as well as violence on the streets</li>
             <li>1 in 6 aged under 24</li>
-            <li>52% were rough sleeping (eg streets, parks, cars), 24% in temporary accommodation (eg couch surfing)</li>
+            <li>52% were rough sleeping (eg streets, parks, cars), 24% in temporary accommodation (eg couch surfing)</li></h4>
     </blockquote>
     <br>
         <p3><b>Table xx</b>. Homelessness and housing, by locations slept most frequently, Advance to Zero, Western Australia</p3>
