--- a/advancetozero.html
+++ b/advancetozero.html
@@ -155,54 +155,49 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <td><p>Sleeping rough</sup></p></td>
+                    <td><p>Sleeping rough</p></td>
                     <td><p>1642</p></td>
                     <td><p>51.7</p></td>
                 </tr>
                 <tr>
-                    <td><p>Crisis and emergency accommodation</sup></p></td>
+                    <td><p>Crisis and emergency accommodation</p></td>
                     <td><p>309</p></td>
                     <td><p>9.7</p></td>
                  </tr>
                 <tr>
-                    <td><p>Crisis and emergency accommodation</sup></p></td>
+                    <td><p>Temporary accommodation (e.g., couch surfing)</p></td>
                     <td><p>768</p></td>
                     <td><p>24.1</p></td>
                 </tr>
                 <tr>
-                    <td><p>Crisis and emergency accommodation</sup></p></td>
+                    <td><p>Short-term accommodationn (e.g., boarding house, hostel, caravan)</p></td>
                     <td><p>180</p></td>
                     <td><p>5.7</p></td>
                 </tr>
                 <tr>
-                    <td><p>Crisis and emergency accommodation</sup></p></td>
+                    <td><p>Institutional accomodation (e.g., hospital, drug and alcohol facility, prison)</p></td>
                     <td><p>103</p></td>
                     <td><p>3.2</p></td>
                 </tr>
                 <tr>
-                    <td><p>Crisis and emergency accommodation</sup></p></td>
+                    <td><p>Permanently housed</p></td>
                     <td><p>47</p></td>
                     <td><p>1.5</p></td>
                 </tr>
                 <tr>
-                    <td><p>Crisis and emergency accommodation</sup></p></td>
+                    <td><p>Other</p></td>
                     <td><p>34</p></td>
                     <td><p>1.1</p></td>
                 </tr>
                 <tr>
-                    <td><p>Crisis and emergency accommodation</sup></p></td>
+                    <td><p>Missing</p></td>
                     <td><p>100</p></td>
                     <td><p>3.1</p></td>
                 </tr>
                 <tr>
-                    <td><p>Crisis and emergency accommodation</sup></p></td>
+                    <td><p>Total</p></td>
                     <td><p>3183</p></td>
                     <td><p>100.0</p></td>
-                </tr>
-                <tr>
-                    <td><p>Crisis and emergency accommodation</sup></p></td>
-                    <td><p>1642</p></td>
-                    <td><p>51.7</p></td>
                 </tr>
                 </tbody>
                 <tfoot>
