--- a/advancetozero.html
+++ b/advancetozero.html
@@ -150,7 +150,7 @@
                 <tr>
                     <th><p></p></th>
                     <th><p>Number</p></th>
-                    <th><p>Percent</p></th>
+                    <th><p>Per cent</p></th>
                 </tr>
                 </thead>
                 <tbody>
@@ -212,321 +212,132 @@
             </table>
         </div>
         <br>
+    <h3>Time spent homeless</h3>
+    <br>
+    <p> For individuals, the mean time spent homeless was 64.1 months – over 5 years; for families, mean time spent homeless was 68.2 months – over 5.5 years. Looking at 2020-2022 data only, the mean time spent homeless has increased to 76.3 months for individuals.
+    </p>
+    <br>
 
-      <table class="styled-table">
+        <p3><b>Table xx</b>. Lifetime duration of homelessness, months, Advance to Zero, Western Australia</p3>
+        <div class="tab-content">
+            <table class="normal-table">
                 <thead>
                 <tr>
-                    <th align="center" colspan="3"><b>Outcomes and current initiatives resulting from the Action Plan of the 10-Year Strategy on Homelessness</b></th>
+                    <th><p></p></th>
+                    <th><p>Individuals</p></th>
+                    <th><p>Families</p></th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr>
-                    <td><i>Outcome</i></td>
-                    <td><i>WA Government initiatives</i></td>
-                    <td><i>Service level initiatives (including those funded in part or full by the WA Government)</i></td>
+                    <td><p>N</p></td>
+                    <td><p>2245</p></td>
+                    <td><p>465</p></td>
                 </tr>
                 <tr>
-                    <td width="33%" rowspan="7">
-                        Improving Aboriginal wellbeing
-                    </td>
-                    <td width="33%">
-                        Boorloo Bidee Mia
-                    </td>
-                    <td width="33%">
-                        Nitja Nop Yorga Ngulla Mia
-                    </td>
+                    <td><p>Mean (months)</p></td>
+                    <td><p>64.1</p></td>
+                    <td><p>68.2</p></td>
+                 </tr>
+                <tr>
+                    <td><p>SD</p></td>
+                    <td><p>80.6</p></td>
+                    <td><p>82.6</p></td>
                 </tr>
                 <tr>
-                    <td rowspan="6"></td>
-                    <td>
-                        Wungening Moort
-                    </td>
+                    <td><p>Median</p></td>
+                    <td><p>36.0</p></td>
+                    <td><p>48.0</p></td>
                 </tr>
-                 <tr>
-                    <td>
-                        Target 120 (T120) program in Kununurra
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        ACHO Alliance
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Moorditj Mia
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Barn Doyintj Doyintj
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Boola Moort Tenancy Support Program
-                    </td>
-                </tr>
-
-                <tr>
-                    <td rowspan="9">
-                        Providing safe, secure and stable homes
-                    </td>
-                    <td>
-                        HFHI
-                    </td>
-                    <td>
-                        The 50 Lives 50 Homes (50 Lives) program
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Housing Investment Package
-                    </td>
-                    <td>
-                        The Zero Project
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Refurbishing 1,500 existing public and community housing dwellings and implementing a rolling maintenance program for almost 4,000 regional dwellings.
-                    </td>
-                    <td>
-                        The Tiny Houses Initiative
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Common Ground facilities in East Perth and Mandurah.
-                    </td>
-                    <td>
-                        My Home projects
-                    </td>
-                </tr>
-                <tr>
-                    <td rowspan="5"></td>
-                    <td>
-                        Horizon House
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        The LIFT Program
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Tuart House
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Tom Fisher House
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Koort Boodja
-                    </td>
-                </tr>
-                <tr>
-                    <td rowspan="30">
-                        Preventing homelessness
-                    </td>
-                    <td>
-                        Path to Safety: Western Australia’s strategy to reduce family and domestic violence 2020-2030
-                    </td>
-                    <td>
-                        Home Stretch Trial
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        A Safe Place: A Western Australian strategy to provide safe and stable accommodation, and support to people experiencing mental health, alcohol and other drug issues 2020-2025 (A Safe Place)
-                    </td>
-                    <td>
-                        12 Buckets
-                    </td>
-                </tr>
-                <tr>
-                    <td rowspan="28">
-                        Our Priorities: Sharing Prosperity
-                    </td>
-                    <td>
-                        T120
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Royal Perth Hospital (RPH) Homeless Team
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Mental Healthy Homeless Pathways
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        After Hours Support Service program
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        StayWitch
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Homeless Discharge Facilitation Fund Project
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Homeless Outreach Dual Diagnosis Service
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Choices Post Discharge program
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        PILLAR
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Centrecare’s Housing Support Worker: Drug and Alcohol Initiative
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Centrecare’s Homelessness Accommodation Support Worker – South East & North West Metropolitan
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Entrypoint Perth
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Entrypoint Outreach
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Centrecare Family Accommodation Service
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Centrecare’s Sky service
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Private Rental Advocacy and Support Services (PRASS)
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Residential Rent Relief Grant Scheme
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Zonta House
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Ground and Co
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Ebenezer Aboriginal Corporation’s Vocational Training and Employment Centre
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Homelessness Engagement Assessment Response Team (HEART)
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Financial Counselling Network
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        The Bunbury Supportive Landlord Pilot (BSLP)
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        St. Patrick’s Health and Dental Clinic
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Passages Youth Engagement Hubs
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Tranby engagement hub
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Reconnecting Lives Program (RLP)
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Safe Night Space
-                    </td>
-                </tr>
-                <tr>
-                    <td rowspan="3">
-                        Strengthening and coordinating our responses and impact
-                    </td>
-                    <td>
-                        No Wrong Door
-                    </td>
-                    <td>
-                        WAAEH Evaluation Framework and the Youth Homelessness Action Plan
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Online Homelessness Services Portal
-                    </td>
-                    <td>
-                        YHAC
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Our Priorities: Sharing Prosperity
-                    </td>
-                    <td>
-                        HOME Hear of My Experience project
-                    </td>
-                </tr>
-
-
-
-
-
-
-
                 </tbody>
+                <tfoot>
+                <tr>
+                    <td colspan="3">
+                        <p2>
+                            Source: Advance to Zero national data 2012-June 2022
+                        </p2>
+                            Note: (1) Estimates based on unique respondents and exclude missing values.
+                        </p2>
+                            (2) Responses that exceeded the respondents' age were removed from analysis.
+                        </p2>
+                            (3) In the VI, the question was worded: What is the total length of time you have lived on the streets or shelters?
+                        </p2>
+                            (4) In VI, Youth VI-SPDAT & Individual VI-SPDAT, question was: What is the total length of time you have lived on the streets or emergency accommodation?
+                        </p2>
+                            (5) In Family VI-SPDAT, question was: What is the total length of time you and your family have not had your own tenancy? 
+                        </p2>
+                    </td>
+                </tr>
+                </tfoot>
             </table>
+        </div>
+        <br>
+
+    <h3>Violence</h3>
+    <br>
+    <p> Many people who are homeless have experienced dangerous events while homeless: 56% have been a victim of attack; 50% have threatened to harm themselves or others; 35% have engaged in risky behaviour such as exchange sex for money, run drugs, have unprotected sex with strangers or share a needle; and 33% had a person forcing them to do things they don’t want to do.
+    </p>
+    <br>
+
+        <p3><b>Table xx</b>. Prevalence of experiences of dangerous events while homeless, per cent, Advance to Zero, Western Australia</p3>
+        <div class="tab-content">
+            <table class="normal-table">
+                <thead>
+                <tr>
+                    <th><p>Description of dangerous event</p></th>
+                    <th><p>Western Australian</p></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td><p>Been a victim of attack since becoming homeless</p></td>
+                    <td><p>56.2%</p></td>
+                </tr>
+                <tr>
+                    <td><p>Threatened or tried to harm themselves or others since becoming homeless</p></td>
+                    <td><p>49.9%</p></td>
+                </tr>
+                <tr>
+                    <td><p>Had a person forcing them to do things that they do not want to do</p></td>
+                    <td><p>32.8%</p></td>
+                </tr>
+                <tr>
+                    <td><p>Engaged in risky behaviour such as exchange sex for money, run drugs, have unprotected sex with strangers or share a needle</p></td>
+                    <td><p>35.2%</p></td>
+                </tr>
+                </tbody>
+                <tfoot>
+                <tr>
+                    <td colspan="3">
+                        <p2>
+                            Source: Advance to Zero national data 2012-June 2022
+                        </p2>
+                    </td>
+                </tr>
+                </tfoot>
+            </table>
+        </div>
+        <br>
+
+    <h3>Interactions with Justice</h3>
+    <br>
+    <p> The majority of respondent reported that they had interacted with police in the previous six months (63.6%) and 55.6% of respondents had been imprisoned at some point in their life.
+    </p>
+    <br>
+
+    <h3>Health problems</h3>
+    <br>
+    <p> A large proportion of respondents reported dental problems (58.4%), dehydration (30.0%) and  19.9% foot/skin infections (19.9%).
+    </p>
+    <br>
+    
+    <p><b>Insert 2 figures</b></p> 
+
+    <h3>Interactions with health</h3>
+    <br>
+    <p> Approximately half (51.6%) of the respondents had been hospitalised in the previous six months, 66.1% reported they had used Accident and Emergency, and 55.6% had been taken to hospital by ambulance.
+    </p>
+    <br>
 
         <img src="csi-uwa logo.png" width="310" height="90" align="right">
 
