--- a/advancetozero.html
+++ b/advancetozero.html
@@ -90,7 +90,7 @@
                 <li>
                     <div class="collapsible-menu-header">
                         <a href="policyandprogram.html">
-                            <span class="title"><u>West Australian policy and program environment</u></span>
+                            <span class="title">West Australian policy and program environment</span>
                         </a>
                     </div>
                     <div class="collapsible-menu-body">
@@ -100,6 +100,14 @@
                     </div>
                     <br>
                 </li>
+                <li>
+                     <div class="collapsible-menu-header">
+                        <a href="advancetozero.html">
+                            <span class="title"><u>Advance to Zero</u></span>
+                        </a>
+                    </div>
+                </li>
+                <br>
                 <li>
                      <div class="collapsible-menu-header">
                         <a href="authors.html">
