--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
                     <br>
                 </li>
                 <li>
+                     <div class="collapsible-menu-header">
+                        <a href="advancetozero.html">
+                            <span class="title">Advance to Zero</span>
+                        </a>
+                    </div>
+                </li>
+                <br>
+                <li>
                     <div class="collapsible-menu-header">
                         <a href="authors.html">
                             <span class="title">Authors</span>
