--- a/preventinghomelessness.html
+++ b/preventinghomelessness.html
@@ -101,6 +101,13 @@
                     </div>
                     <br>
                 </li>
+                <li>
+                     <div class="collapsible-menu-header">
+                        <a href="advancetozero.html">
+                            <span class="title">Advance to Zero</span>
+                        </a>
+                    </div>
+                </li>
                 <br>
                 <li>
                     <div class="collapsible-menu-header">
