--- a/advancetozero.html
+++ b/advancetozero.html
@@ -225,9 +225,9 @@
     <p> For individuals, the mean time spent homeless was 64.1 months – over 5 years; for families, mean time spent homeless was 68.2 months – over 5.5 years. Looking at 2020-2022 data only, the mean time spent homeless has increased to 76.3 months for individuals.
     </p>
     <br>
+    </div>
 
         <p3><b>Table xx</b>. Lifetime duration of homelessness, months, Advance to Zero, Western Australia</p3>
-        <div class="tab-content">
             <table class="normal-table">
                 <thead>
                 <tr>
@@ -288,7 +288,6 @@
     <br>
 
         <p3><b>Table xx</b>. Prevalence of experiences of dangerous events while homeless, per cent, Advance to Zero, Western Australia</p3>
-        <div class="tab-content">
             <table class="normal-table">
                 <thead>
                 <tr>
