--- a/advancetozero.html
+++ b/advancetozero.html
@@ -150,7 +150,8 @@
             <li>52% were rough sleeping (eg streets, parks, cars), 24% in temporary accommodation (eg couch surfing)</li></h4>
     </blockquote>
     <br>
-        <p3><b>Table xx</b>. Homelessness and housing, by locations slept most frequently, Advance to Zero, Western Australia</p3>
+    <centre>
+        <caption style="text-align:left"><p3>Table xx. Homelessness and housing, by locations slept most frequently, Advance to Zero, Western Australia</p3></caption>
             <table class="normal-table">
                 <thead>
                 <tr>
@@ -216,6 +217,7 @@
                 </tr>
                 </tfoot>
             </table>
+        </center>
         <br>
     <h3>Time spent homeless</h3>
     <br>
