--- a/advancetozero.html
+++ b/advancetozero.html
@@ -225,8 +225,8 @@
     </p>
     <br>
     </div>
-
-        <p3><b>Table xx</b>. Lifetime duration of homelessness, months, Advance to Zero, Western Australia</p3>
+    <center>
+       <caption style="text-align:left"><p3>Table xx. Lifetime duration of homelessness, months, Advance to Zero, Western Australia</p3></caption>
             <table class="normal-table">
                 <thead>
                 <tr>
@@ -277,6 +277,7 @@
                 </tr>
                 </tfoot>
             </table>
+            </center>
         </div>
         <br>
 
