--- a/advancetozero.html
+++ b/advancetozero.html
@@ -224,7 +224,7 @@
     <p> For individuals, the mean time spent homeless was 64.1 months – over 5 years; for families, mean time spent homeless was 68.2 months – over 5.5 years. Looking at 2020-2022 data only, the mean time spent homeless has increased to 76.3 months for individuals.
     </p>
     <br>
-    </div>
+    
     <center>
        <caption style="text-align:left"><p3>Table xx. Lifetime duration of homelessness, months, Advance to Zero, Western Australia</p3></caption>
             <table class="normal-table">
@@ -287,7 +287,8 @@
     </p>
     <br>
 
-        <p3><b>Table xx</b>. Prevalence of experiences of dangerous events while homeless, per cent, Advance to Zero, Western Australia</p3>
+    <center>
+       <caption style="text-align:left"><p3>Table xx. Prevalence of experiences of dangerous events while homeless, per cent, Advance to Zero, Western Australia</p3></caption>
             <table class="normal-table">
                 <thead>
                 <tr>
@@ -315,7 +316,7 @@
                 </tbody>
                 <tfoot>
                 <tr>
-                    <td colspan="3">
+                    <td colspan="2">
                         <p2>
                             Source: Advance to Zero national data 2012-June 2022
                         </p2>
@@ -323,7 +324,7 @@
                 </tr>
                 </tfoot>
             </table>
-        </div>
+        </center>
         <br>
 
     <h3>Interactions with Justice</h3>
