--- a/advancetozero.html
+++ b/advancetozero.html
@@ -150,7 +150,7 @@
             <li>52% were rough sleeping (eg streets, parks, cars), 24% in temporary accommodation (eg couch surfing)</li></h4>
     </blockquote>
     <br>
-    <centre>
+    <center>
         <caption style="text-align:left"><p3>Table xx. Homelessness and housing, by locations slept most frequently, Advance to Zero, Western Australia</p3></caption>
             <table class="normal-table">
                 <thead>
