--- a/advancetozero.html
+++ b/advancetozero.html
@@ -152,7 +152,7 @@
     <br>
     <center>
         <table class="normal-table">
-            <caption style="text-align:left"><p3>Table xx. Homelessness and housing, by locations slept most frequently, Advance to Zero, Western Australia</p3></caption>
+            <caption style="text-align:left"><p3><b>Table xx</b>. Homelessness and housing, by locations slept most frequently, Advance to Zero, Western Australia</p3></caption>
                 <thead>
                 <tr>
                     <th><p></p></th>
@@ -226,7 +226,7 @@
     <br>
     
         <table class="normal-table">
-            <caption style="text-align:left"><p3>Table xx. Lifetime duration of homelessness, months, Advance to Zero, Western Australia</p3></caption>
+            <caption style="text-align:left"><p3><b>Table xx</b>. Lifetime duration of homelessness, months, Advance to Zero, Western Australia</p3></caption>
             <center>
                 <thead>
                 <tr>
@@ -293,7 +293,7 @@
 
     <center>
         <table class="normal-table">
-            <caption style="text-align:left"><p3>Table xx. Prevalence of experiences of dangerous events while homeless, per cent, Advance to Zero, Western Australia</p3></caption>
+            <caption style="text-align:left"><p3><b>Table xx</b>. Prevalence of experiences of dangerous events while homeless, per cent, Advance to Zero, Western Australia</p3></caption>
                 <thead>
                 <tr>
                     <th><p>Description of dangerous event</p></th>
