--- a/policyandprogram.html
+++ b/policyandprogram.html
@@ -98,6 +98,10 @@
                         <a href="policyandprogram#The-WA-Homelessness-Strategy">
                             <span class="title">The WA Homelessness Strategy: Action Plan 2020-2025</span>
                         </a>
+                        <br><br>
+                        <a href="policyandprogram#ENDING-HOMELESSNESS-IN-WESTERN-AUSTRALIA">
+                            <span class="title">Ending homelessness in Western Australia</span>
+                        </a>
                     </div>
                     <br>
                 </li>
@@ -139,6 +143,9 @@
     <div class="spacer"></div>
     <div class="clr"></div>
     <br>
+    
+    <div id = "ENDING-HOMELESSNESS-IN-WESTERN-AUSTRALIA">
+    
     <div id="The-WA-Homelessness-Strategy">
         <h2>The WA Homelessness Strategy: Action Plan 2020-2025</h2>
         <p>
