--- a/policyandprogram.html
+++ b/policyandprogram.html
@@ -95,12 +95,12 @@
                         </a>
                     </div>
                     <div class="collapsible-menu-body">
-                        <a href="policyandprogram#The-WA-Homelessness-Strategy">
-                            <span class="title">The WA Homelessness Strategy: Action Plan 2020-2025</span>
-                        </a>
-                        <br><br>
                         <a href="policyandprogram#ENDING-HOMELESSNESS-IN-WESTERN-AUSTRALIA">
                             <span class="title">Ending homelessness in Western Australia</span>
+                        </a>
+                        <br><br>
+                        <a href="policyandprogram#The-WA-Homelessness-Strategy">
+                            <span class="title">The WA Homelessness Strategy: Action Plan 2020-2025</span>
                         </a>
                     </div>
                     <br>
@@ -145,7 +145,7 @@
     <br>
     
     <div id = "ENDING-HOMELESSNESS-IN-WESTERN-AUSTRALIA">
-        <p> The Centre for Social Impact UWA (CSI UWA) is a founding member of the Western Australian Alliance to End Homelessness (WAAEH).
+        <p> The Centre for Social Impact UWA (CSI UWA) is a founding member of the <a href="https://www.endhomelessnesswa.com/">Western Australian Alliance to End Homelessness</a> (WAAEH).
         </p>
         <br>
         <p> The WAAEH is comprised of a group of individuals and organisations that have come together to end homelessness in Western Australia. In 2018, the WAAEH launched its 10-year Strategy to End Homelessness 2018-2028.
