--- a/policyandprogram.html
+++ b/policyandprogram.html
@@ -145,13 +145,7 @@
     <br>
     
     <div id = "ENDING-HOMELESSNESS-IN-WESTERN-AUSTRALIA">
-        <p> The Centre for Social Impact UWA (CSI UWA) is a founding member of the <a href="https://www.endhomelessnesswa.com/">Western Australian Alliance to End Homelessness</a> (WAAEH).
-        </p>
-        <br>
-        <p> The WAAEH is comprised of a group of individuals and organisations that have come together to end homelessness in Western Australia. In 2018, the WAAEH launched its 10-year Strategy to End Homelessness 2018-2028.
-        </p>
-        <br>
-        <p> The WAAEH - through Shelter WA - was funded by Lotterywest to further develop and implement the WAAEH strategy and as part of this funding CSI UWA has undertaken multiple programs of work.
+        <p> The Centre for Social Impact UWA (CSI UWA) is a founding member of the <a href="https://www.endhomelessnesswa.com/">Western Australian Alliance to End Homelessness</a> (WAAEH). The WAAEH is comprised of a group of individuals and organisations that have come together to end homelessness in Western Australia. In 2018, the WAAEH launched its 10-year Strategy to End Homelessness 2018-2028. The WAAEH - through Shelter WA - was funded by Lotterywest to further develop and implement the WAAEH strategy and as part of this funding CSI UWA has undertaken multiple programs of work.
         </p>
         <br>
         <h3> Latest WAAEH publications </h3>
