--- a/policyandprogram.html
+++ b/policyandprogram.html
@@ -151,8 +151,8 @@
         <br>
         <h3> Latest WAAEH publications </h3>
         <br>
-        <li><p> On 3 August 2021 the Ending Homelessness in Western Australia: 2021 Report and Summary Report was released </p></li><br>
-        <li><p> On 7 July 2021 an updated Outcomes Measurement Framework: Dashboard V3 was released </p></li>
+        <p> &#62 On 3 August 2021 the Ending Homelessness in Western Australia: 2021 Report and Summary Report was released </p><br>
+        <p> &#62 On 7 July 2021 an updated Outcomes Measurement Framework: Dashboard V3 was released </p>
         <br>
         <p> This report presents the 2021 update to the Western Australian Alliance to End Homelessness Outcomes Measurement Framework: Dashboard, which was first released in August 2019 and updated in February 2020. The Dashboard is an evolving, accessible and visual platform designed to present and report on outcomes relevant to the key targets of the WAAEH.
         </p>
