--- a/policyandprogram.html
+++ b/policyandprogram.html
@@ -145,7 +145,7 @@
     <br>
     
     <div id = "ENDING-HOMELESSNESS-IN-WESTERN-AUSTRALIA">
-        <h2>Ending homelessness in Western Australia</h2>
+        <h2>Ending homelessness in Western Australia</h2><br>
         <p> The Centre for Social Impact UWA (CSI UWA) is a founding member of the <a href="https://www.endhomelessnesswa.com/">Western Australian Alliance to End Homelessness</a> (WAAEH). The WAAEH is comprised of a group of individuals and organisations that have come together to end homelessness in Western Australia. In 2018, the WAAEH launched its 10-year Strategy to End Homelessness 2018-2028. The WAAEH - through Shelter WA - was funded by Lotterywest to further develop and implement the WAAEH strategy and as part of this funding CSI UWA has undertaken multiple programs of work.
         </p>
         <br>
@@ -161,7 +161,7 @@
         
     <div id="The-WA-Homelessness-Strategy">
         <h2>The WA Homelessness Strategy: Action Plan 2020-2025</h2>
-        <p>
+        <p><br>
             Released in July 2020, the first Action Plan of the 10-Year Strategy on Homelessness focuses on ending rough sleeping, building a No Wrong Door approach to service delivery, increasing low-barrier crisis responses, and supporting innovation. In 2020, the Western Australian Government provided $71.8 million funding boost for homelessness services and $34.5 million for the Housing First Homelessness Initiative (HFHI).
             <br>
             A summary of the actions, planned and already ongoing activities, and Western Australian and service level initiatives for each of the four outcome areas identified in the Action Plan is detailed in the table below. The Western Australian Government’s Strategy and initiatives together with reforms in areas such social housing supply, FDV, out of home care and youth justice, support the agenda to end homelessness in Western Australia.
