--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
                         </a>
                     </div>
                     <div class="collapsible-menu-body">
+                        <a href="policyandprogram#ENDING-HOMELESSNESS-IN-WESTERN-AUSTRALIA">
+                            <span class="title">Ending homelessness in Western Australia</span>
+                        </a>
+                        <br><br>
                         <a href="policyandprogram#The-WA-Homelessness-Strategy">
                             <span class="title">The WA Homelessness Strategy: Action Plan 2020-2025</span>
                         </a>
