--- a/advancetozero.html
+++ b/advancetozero.html
@@ -83,7 +83,7 @@
                 <li>
                      <div class="collapsible-menu-header">
                         <a href="livedexperience.html">
-                            <span class="title">The Lived Experience Voice</span>
+                            <span class="title">The lived experience voice</span>
                         </a>
                     </div>
                 </li>
