--- a/livedexperience.html
+++ b/livedexperience.html
@@ -83,7 +83,7 @@
                 <li>
                      <div class="collapsible-menu-header">
                         <a href="livedexperience.html">
-                          <span class="title"><u>Lived Experience</u></span>
+                          <span class="title"><u>The lived experience voice</u></span>
                         </a>
                     </div>
                 </li>
