--- a/trendsinhomelessness.html
+++ b/trendsinhomelessness.html
@@ -83,7 +83,7 @@
                 <li>
                      <div class="collapsible-menu-header">
                         <a href="livedexperience.html">
-                          <span class="title">Lived Experience</span>
+                          <span class="title">The lived experience voice</span>
                         </a>
                     </div>
                 </li>
