--- a/livedexperience.html
+++ b/livedexperience.html
@@ -144,7 +144,7 @@
     <div class="clr"></div>
     <br>
 
-        <h2>People experiencing homelessness: what they need to be safe and well</h2>
+        <h2>People experiencing homelessness: their voice on what they need to be safe and well</h2>
         <p> Respondents of the Australian Family Service Priority Decision Assistant Tool (F-SPDAT) and Australian Vulnerability Index Service Priority Decision Assistant Tool (VI-SPDAT) were asked at the end of their survey “What do you need to be safe and well?” This was posed as an open-ended question, leaving respondents able to articulate any needs that were salient to them. A total of 2,774 valid responses were recorded for Western Australian participants.
     </p>
     <br>
