--- a/livedexperience.html
+++ b/livedexperience.html
@@ -145,10 +145,11 @@
     <br>
 
         <h2>People experiencing homelessness: their voice on what they need to be safe and well</h2>
-        <p> Respondents of the Australian Family Service Priority Decision Assistant Tool (F-SPDAT) and Australian Vulnerability Index Service Priority Decision Assistant Tool (VI-SPDAT) were asked at the end of their survey “What do you need to be safe and well?” This was posed as an open-ended question, leaving respondents able to articulate any needs that were salient to them. A total of 2,774 valid responses were recorded for Western Australian participants.
+        <br>
+        <p> The Advance to Zero database includes responses from those experiencing homelessness to a question contained the following question “What do you need to be safe and well?” This was posed as an open-ended question, leaving respondents able to articulate any needs that were salient to them. A total of 2,774 responses were recorded for Western Australian participants.
     </p>
     <br>
-        <p> Respondents mentioned physiological needs (e.g. food/water), safety needs (e.g. housing and shelter, physical health), belongingness and love needs (e.g. friends and family, social support) and esteem needs (e.g. independence and employment).
+        <p> Respondents overwhelmingly mentioned housing and a home but also refer to physiological needs (e.g. food/water), safety and health needs, belongingness and love needs (e.g. friends and family, social support) and esteem needs (e.g. independence and employment).
     </p>
     <br>
     <br>
